--- a/koak.cabal
+++ b/koak.cabal
@@ -34,7 +34,7 @@ library
       base >=4.7 && <5
   default-language: Haskell2010
 
-executable koak-exe
+executable koak
   main-is: Main.hs
   other-modules:
       Paths_koak
