Add project skeleton

--- a/koak.cabal
+++ b/koak.cabal
@@ -25,7 +25,10 @@ source-repository head
 
 library
   exposed-modules:
+      Analyser
+      Compiler
       Lib
+      Parser
       Syntax
   other-modules:
       Paths_koak
