--- a/koak.cabal
+++ b/koak.cabal
@@ -34,8 +34,9 @@ library
       Paths_koak
   hs-source-dirs:
       src
+  ghc-options: -Wall
   build-depends:
-      base >=4.7 && <5
+      base >=4.14 && <5
   default-language: Haskell2010
 
 executable koak
@@ -46,7 +47,7 @@ executable koak
       app
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      base >=4.14 && <5
     , koak
   default-language: Haskell2010
 
@@ -54,11 +55,16 @@ test-suite koak-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
+      Analyser
+      Compiler
+      Parser
       Paths_koak
   hs-source-dirs:
       test
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
   build-depends:
-      base >=4.7 && <5
+      base >=4.14 && <5
     , koak
+    , tasty >=1.4 && <2
+    , tasty-hunit >=0.10 && <1
   default-language: Haskell2010
