--- a/package.yaml
+++ b/package.yaml
@@ -21,10 +21,11 @@ description:
   Please see the README on GitHub at <https://github.com/nasso/koak#readme>
 
 dependencies:
-  - base >= 4.7 && < 5
+  - base >= 4.14 && < 5
 
 library:
   source-dirs: src
+  ghc-options: -Wall
 
 executables:
   koak:
@@ -45,5 +46,8 @@ tests:
       - -threaded
       - -rtsopts
       - -with-rtsopts=-N
+      - -Wall
     dependencies:
       - koak
+      - tasty >= 1.4 && < 2
+      - tasty-hunit >= 0.10 && < 1
