--- a/koak.cabal
+++ b/koak.cabal
@@ -45,7 +45,7 @@ executable koak
       Paths_koak
   hs-source-dirs:
       app
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
   build-depends:
       base >=4.14 && <5
     , koak
