--- a/koak.cabal
+++ b/koak.cabal
@@ -37,6 +37,8 @@ library
   ghc-options: -Wall
   build-depends:
       base >=4.14 && <5
+    , mtl >=2.2 && <3
+    , transformers >=0.5 && <1
   default-language: Haskell2010
 
 executable koak
@@ -49,6 +51,8 @@ executable koak
   build-depends:
       base >=4.14 && <5
     , koak
+    , mtl >=2.2 && <3
+    , transformers >=0.5 && <1
   default-language: Haskell2010
 
 test-suite koak-test
@@ -65,6 +69,8 @@ test-suite koak-test
   build-depends:
       base >=4.14 && <5
     , koak
+    , mtl >=2.2 && <3
     , tasty >=1.4 && <2
     , tasty-hunit >=0.10 && <1
+    , transformers >=0.5 && <1
   default-language: Haskell2010
