--- a/package.yaml
+++ b/package.yaml
@@ -22,6 +22,8 @@ description:
 
 dependencies:
   - base >= 4.14 && < 5
+  - mtl >= 2.2 && < 3
+  - transformers >= 0.5 && < 1
 
 library:
   source-dirs: src
