--- a/package.yaml
+++ b/package.yaml
@@ -24,6 +24,7 @@ dependencies:
   - base >= 4.14 && < 5
   - mtl >= 2.2 && < 3
   - transformers >= 0.5 && < 1
+  - unordered-containers >= 0.2 && < 1
 
 library:
   source-dirs: src
