--- a/koak.cabal
+++ b/koak.cabal
@@ -42,6 +42,7 @@ library
     , llvm-hs >=9.0.1 && <9.1
     , llvm-hs-pure ==9.0.*
     , mtl ==2.2.*
+    , optparse-applicative >=0.16 && <0.18
     , transformers ==0.5.*
     , unordered-containers ==0.2.*
   default-language: Haskell2010
@@ -61,6 +62,7 @@ executable koak
     , llvm-hs >=9.0.1 && <9.1
     , llvm-hs-pure ==9.0.*
     , mtl ==2.2.*
+    , optparse-applicative >=0.16 && <0.18
     , transformers ==0.5.*
     , unordered-containers ==0.2.*
   default-language: Haskell2010
@@ -84,6 +86,7 @@ test-suite koak-test
     , llvm-hs >=9.0.1 && <9.1
     , llvm-hs-pure ==9.0.*
     , mtl ==2.2.*
+    , optparse-applicative >=0.16 && <0.18
     , tasty >=1.4 && <2
     , tasty-hunit >=0.10 && <1
     , transformers ==0.5.*
