--- a/koak.cabal
+++ b/koak.cabal
@@ -37,9 +37,9 @@ library
   ghc-options: -Wall
   build-depends:
       base >=4.14 && <5
-    , mtl >=2.2 && <3
-    , transformers >=0.5 && <1
-    , unordered-containers >=0.2 && <1
+    , mtl ==2.2.*
+    , transformers ==0.5.*
+    , unordered-containers ==0.2.*
   default-language: Haskell2010
 
 executable koak
@@ -52,9 +52,9 @@ executable koak
   build-depends:
       base >=4.14 && <5
     , koak
-    , mtl >=2.2 && <3
-    , transformers >=0.5 && <1
-    , unordered-containers >=0.2 && <1
+    , mtl ==2.2.*
+    , transformers ==0.5.*
+    , unordered-containers ==0.2.*
   default-language: Haskell2010
 
 test-suite koak-test
@@ -71,9 +71,9 @@ test-suite koak-test
   build-depends:
       base >=4.14 && <5
     , koak
-    , mtl >=2.2 && <3
+    , mtl ==2.2.*
     , tasty >=1.4 && <2
     , tasty-hunit >=0.10 && <1
-    , transformers >=0.5 && <1
-    , unordered-containers >=0.2 && <1
+    , transformers ==0.5.*
+    , unordered-containers ==0.2.*
   default-language: Haskell2010
