--- a/koak.cabal
+++ b/koak.cabal
@@ -37,9 +37,10 @@ library
   ghc-options: -Wall
   build-depends:
       base >=4.14 && <5
+    , comparse ==0.2.*
     , mtl ==2.2.*
     , transformers ==0.5.*
-    , unordered-containers ==0.2.*
+    , unordered-containers >=0.2.15 && <0.3
   default-language: Haskell2010
 
 executable koak
@@ -51,10 +52,11 @@ executable koak
   ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
   build-depends:
       base >=4.14 && <5
+    , comparse ==0.2.*
     , koak
     , mtl ==2.2.*
     , transformers ==0.5.*
-    , unordered-containers ==0.2.*
+    , unordered-containers >=0.2.15 && <0.3
   default-language: Haskell2010
 
 test-suite koak-test
@@ -70,10 +72,11 @@ test-suite koak-test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
   build-depends:
       base >=4.14 && <5
+    , comparse ==0.2.*
     , koak
     , mtl ==2.2.*
     , tasty >=1.4 && <2
     , tasty-hunit >=0.10 && <1
     , transformers ==0.5.*
-    , unordered-containers ==0.2.*
+    , unordered-containers >=0.2.15 && <0.3
   default-language: Haskell2010
