--- a/koak.cabal
+++ b/koak.cabal
@@ -40,7 +40,7 @@ library
     , comparse ==0.2.*
     , mtl ==2.2.*
     , transformers ==0.5.*
-    , unordered-containers >=0.2.15 && <0.3
+    , unordered-containers ==0.2.*
   default-language: Haskell2010
 
 executable koak
@@ -56,7 +56,7 @@ executable koak
     , koak
     , mtl ==2.2.*
     , transformers ==0.5.*
-    , unordered-containers >=0.2.15 && <0.3
+    , unordered-containers ==0.2.*
   default-language: Haskell2010
 
 test-suite koak-test
@@ -78,5 +78,5 @@ test-suite koak-test
     , tasty >=1.4 && <2
     , tasty-hunit >=0.10 && <1
     , transformers ==0.5.*
-    , unordered-containers >=0.2.15 && <0.3
+    , unordered-containers ==0.2.*
   default-language: Haskell2010
