--- a/package.yaml
+++ b/package.yaml
@@ -24,8 +24,8 @@ dependencies:
   - base >= 4.14 && < 5
   - mtl >= 2.2 && < 2.3
   - transformers >= 0.5 && < 0.6
-  - unordered-containers >= 0.2.15 && < 0.3
-  - comparse == 0.2.*
+  - unordered-containers >= 0.2 && < 0.3
+  - comparse >= 0.2 && < 0.3
 
 library:
   source-dirs: src
