--- a/package.yaml
+++ b/package.yaml
@@ -26,6 +26,7 @@ dependencies:
   - transformers >= 0.5 && < 0.6
   - unordered-containers >= 0.2 && < 0.3
   - comparse >= 0.2 && < 0.3
+  - llvm-hs-pure >= 9.0 && < 10.0
 
 library:
   source-dirs: src
