--- a/koak.cabal
+++ b/koak.cabal
@@ -37,6 +37,7 @@ library
   ghc-options: -Wall
   build-depends:
       base >=4.14 && <5
+    , bytestring ==0.10.*
     , comparse ==0.2.*
     , llvm-hs-pure >=9.0 && <10.0
     , mtl ==2.2.*
@@ -53,6 +54,7 @@ executable koak
   ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
   build-depends:
       base >=4.14 && <5
+    , bytestring ==0.10.*
     , comparse ==0.2.*
     , koak
     , llvm-hs-pure >=9.0 && <10.0
@@ -74,6 +76,7 @@ test-suite koak-test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
   build-depends:
       base >=4.14 && <5
+    , bytestring ==0.10.*
     , comparse ==0.2.*
     , koak
     , llvm-hs-pure >=9.0 && <10.0
