--- a/koak.cabal
+++ b/koak.cabal
@@ -39,7 +39,8 @@ library
       base >=4.14 && <5
     , bytestring ==0.10.*
     , comparse ==0.2.*
-    , llvm-hs-pure >=9.0 && <10.0
+    , llvm-hs >=9.0.1 && <9.1
+    , llvm-hs-pure ==9.0.*
     , mtl ==2.2.*
     , transformers ==0.5.*
     , unordered-containers ==0.2.*
@@ -57,7 +58,8 @@ executable koak
     , bytestring ==0.10.*
     , comparse ==0.2.*
     , koak
-    , llvm-hs-pure >=9.0 && <10.0
+    , llvm-hs >=9.0.1 && <9.1
+    , llvm-hs-pure ==9.0.*
     , mtl ==2.2.*
     , transformers ==0.5.*
     , unordered-containers ==0.2.*
@@ -79,7 +81,8 @@ test-suite koak-test
     , bytestring ==0.10.*
     , comparse ==0.2.*
     , koak
-    , llvm-hs-pure >=9.0 && <10.0
+    , llvm-hs >=9.0.1 && <9.1
+    , llvm-hs-pure ==9.0.*
     , mtl ==2.2.*
     , tasty >=1.4 && <2
     , tasty-hunit >=0.10 && <1
