--- a/package.yaml
+++ b/package.yaml
@@ -26,7 +26,8 @@ dependencies:
   - transformers >= 0.5 && < 0.6
   - unordered-containers >= 0.2 && < 0.3
   - comparse >= 0.2 && < 0.3
-  - llvm-hs-pure >= 9.0 && < 10.0
+  - llvm-hs >= 9.0.1 && < 9.1
+  - llvm-hs-pure >= 9.0 && < 9.1
   - bytestring >= 0.10 && < 0.11
 
 library:
