Remove file before writing to it to avoid trailing data

--- a/koak.cabal
+++ b/koak.cabal
@@ -39,6 +39,7 @@ library
       base >=4.14 && <5
     , bytestring ==0.10.*
     , comparse ==0.2.*
+    , directory >=1.3.6 && <1.4
     , llvm-hs >=9.0.1 && <9.1
     , llvm-hs-pure ==9.0.*
     , mtl ==2.2.*
@@ -59,6 +60,7 @@ executable koak
       base >=4.14 && <5
     , bytestring ==0.10.*
     , comparse ==0.2.*
+    , directory >=1.3.6 && <1.4
     , filepath ==1.4.*
     , koak
     , llvm-hs >=9.0.1 && <9.1
@@ -89,6 +91,7 @@ test-suite koak-test
       base >=4.14 && <5
     , bytestring ==0.10.*
     , comparse ==0.2.*
+    , directory >=1.3.6 && <1.4
     , koak
     , llvm-hs >=9.0.1 && <9.1
     , llvm-hs-pure ==9.0.*
