--- a/package.yaml
+++ b/package.yaml
@@ -30,6 +30,7 @@ dependencies:
   - llvm-hs-pure >= 9.0 && < 9.1
   - bytestring >= 0.10 && < 0.11
   - optparse-applicative >= 0.16 && < 0.18
+  - directory >= 1.3.6 && < 1.4
 
 library:
   source-dirs: src
