--- a/koak.cabal
+++ b/koak.cabal
@@ -40,10 +40,13 @@ library
     , bytestring ==0.10.*
     , comparse ==0.2.*
     , directory >=1.3.6 && <1.4
+    , exceptions ==0.10.*
     , llvm-hs >=9.0.1 && <9.1
     , llvm-hs-pure ==9.0.*
     , mtl ==2.2.*
     , optparse-applicative >=0.16 && <0.18
+    , process ==1.6.*
+    , temporary ==1.3.*
     , transformers ==0.5.*
     , unordered-containers ==0.2.*
   default-language: Haskell2010
@@ -61,12 +64,15 @@ executable koak
     , bytestring ==0.10.*
     , comparse ==0.2.*
     , directory >=1.3.6 && <1.4
+    , exceptions ==0.10.*
     , filepath ==1.4.*
     , koak
     , llvm-hs >=9.0.1 && <9.1
     , llvm-hs-pure ==9.0.*
     , mtl ==2.2.*
     , optparse-applicative >=0.16 && <0.18
+    , process ==1.6.*
+    , temporary ==1.3.*
     , transformers ==0.5.*
     , unordered-containers ==0.2.*
   default-language: Haskell2010
@@ -97,13 +103,16 @@ test-suite koak-test
     , bytestring ==0.10.*
     , comparse ==0.2.*
     , directory >=1.3.6 && <1.4
+    , exceptions ==0.10.*
     , koak
     , llvm-hs >=9.0.1 && <9.1
     , llvm-hs-pure ==9.0.*
     , mtl ==2.2.*
     , optparse-applicative >=0.16 && <0.18
+    , process ==1.6.*
     , tasty >=1.4 && <2
     , tasty-hunit >=0.10 && <1
+    , temporary ==1.3.*
     , transformers ==0.5.*
     , unordered-containers ==0.2.*
   default-language: Haskell2010
