--- a/package.yaml
+++ b/package.yaml
@@ -31,6 +31,9 @@ dependencies:
   - bytestring >= 0.10 && < 0.11
   - optparse-applicative >= 0.16 && < 0.18
   - directory >= 1.3.6 && < 1.4
+  - temporary >= 1.3 && < 1.4
+  - process >= 1.6 && < 1.7
+  - exceptions >= 0.10 && < 0.11
 
 library:
   source-dirs: src
