--- a/package.yaml
+++ b/package.yaml
@@ -34,6 +34,7 @@ dependencies:
   - temporary >= 1.3 && < 1.4
   - process >= 1.6 && < 1.7
   - exceptions >= 0.10 && < 0.11
+  - file-embed >= 0.0.15 && < 0.0.16
 
 library:
   source-dirs: src
