--- a/koak.cabal
+++ b/koak.cabal
@@ -83,6 +83,7 @@ test-suite koak-test
       Test.Koa.Analyser.Variables
       Test.Koa.Compiler
       Test.Koa.Parser
+      Test.Koa.Util
       Paths_koak
   hs-source-dirs:
       test
