Add let support

--- a/koak.cabal
+++ b/koak.cabal
@@ -84,6 +84,7 @@ test-suite koak-test
       Test.Koa.Compiler
       Test.Koa.Parser
       Test.Koa.Parser.Binop
+      Test.Koa.Parser.Let
       Test.Koa.Parser.Returns
       Test.Koa.Parser.Utils
       Test.Koa.Util
