Move linker in submodule

--- a/koak.cabal
+++ b/koak.cabal
@@ -27,6 +27,7 @@ library
   exposed-modules:
       Koa.Analyser
       Koa.Compiler
+      Koa.Linker
       Koa.Parser
       Koa.Syntax
       Lib
