Add python tests to workflow

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -53,3 +53,4 @@ jobs:
           set -ex
           stack upgrade || curl -sSL https://get.haskellstack.org/ | sh -s - -f
           stack test --fast --no-terminal
+          python3 tests.py
