--- a/koak.cabal
+++ b/koak.cabal
@@ -94,6 +94,7 @@ test-suite koak-test
       Test.Koa.Parser
       Test.Koa.Parser.Binop
       Test.Koa.Parser.Let
+      Test.Koa.Parser.Loop
       Test.Koa.Parser.Returns
       Test.Koa.Parser.Utils
       Test.Koa.Util
